[project]
name = "md2pdf"
version = "3.0.1"
description = "The Markdown to PDF conversion tool with styles"
authors = [
  {name="Julien Maupetit", email="julien@maupetit.net"},
]
license = "MIT"
readme = "README.md"
keywords = ["markdown", "pdf", "html", "css", "cli"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
dependencies = [
    "jinja2>=3",
    "markdown>=3.5",
    "pygments>=2.17",
    "pymdown-extensions>=10",
    "python-frontmatter>=1.1",
    "weasyprint>=60",
]

[project.optional-dependencies]
cli = [
    "typer>=0.21.1",
]
latex = [
    "markdown-katex>=202406.1035",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pypdf>=6.6.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "types-markdown>=3.10.0.20251106",
]

[project.urls]
Homepage = "https://github.com/jmaupetit/md2pdf"
Repository = "https://github.com/jmaupetit/md2pdf"

[project.scripts]
md2pdf = "md2pdf.__main__:cli.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Third party packages configuration
[tool.pytest.ini_options]
addopts = "-v --cov=md2pdf --cov-report term-missing"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = [
    "tests",
]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]
ignore = [
    "PLR0913", # Too many arguments in function definition
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "PLR2004",  # Pylint magic-value-comparison
]

[tool.mypy]
files = "./**/*.py"
ignore_missing_imports = true
